--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/index.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/index.html
@@ -124,12 +124,24 @@
                         <a href="javascript:void(0);"><span id="Down" class="glyphicon glyphicon-chevron-right" style="float:right;margin-top:7px;"></span></a>
                     </div>
                     <ul class="nav nav-tabs" id="page-tabs" style="border-bottom: none; position: relative; white-space: nowrap; overflow: hidden;">
-                        <li class=""><a href="#home" data-toggle="tab" aria-expanded="false">首页</a></li>
+                        <li class="active"><a href="#home" data-toggle="tab" aria-expanded="false">首页</a></li>
+                        <li class=""><a href="#notice" data-toggle="tab" aria-expanded="false">示例</a></li>
+                        <li class=""><a href="#learn" data-toggle="tab" aria-expanded="false">教程</a></li>
+                        <li class=""><a href="#ad" data-toggle="tab" aria-expanded="false">支持</a></li>
                     </ul>
                 </div>
                 <div class="tab-content" id="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="home">
-                        <iframe id="iframe_page_home" style="width: 100%;" src="Readme.html" frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="auto" allowtransparency="true"></iframe>
+                        <iframe id="iframe_page_home" style="width: 100%;" src="readme.html" frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="auto" allowtransparency="true"></iframe>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="notice">
+                        <iframe id="iframe_page_notice" style="width: 100%;" src="notice.html" frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="auto" allowtransparency="true"></iframe>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="learn">
+                        <iframe id="iframe_page_learn" style="width: 100%;" src="learn.html" frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="auto" allowtransparency="true"></iframe>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="ad">
+                        <iframe id="iframe_page_ad" style="width: 100%;" src="ad.html" frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="auto" allowtransparency="true"></iframe>
                     </div>
                 </div>
 
@@ -139,6 +151,7 @@
             <iframe id="iframe_page_home" style="width: 100%;" src="Readme.html" frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="auto" allowtransparency="true"></iframe>
         </div>-->
         <footer class="main-footer" style="padding: 5px;">
+            <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1263497164'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1263497164%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
             <strong>Copyright &copy; 2017-2018 <a href="javascript:void();">bitdao</a>.</strong> All rights reserved.
             <div class="pull-right hidden-xs">
                 <b>Version</b> 1.0.0
