--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
@@ -46,11 +46,11 @@
         <p>流程引擎：流程配置、工作台。</p>
         <h4><span style="font-weight:bold;">技术集成：</span></h4>
         <p>二维码生成</p>
-        <p>Swagger(<a href="/swagger" target="_blank">查看</a>)</p>
-        <p>定时服务(<a href="notice.html">服务列表</a>)</p>
+        <p>Swagger</p>
+        <p>定时服务</p>
         <h4><span style="font-weight:bold;">服务集成：</span></h4>
-        <p>微信支付(<a href="pay.html">示例</a>)</p>
-        <p>个推平台(<a href="notice.html">示例</a>)</p>
+        <p>微信支付</p>
+        <p>个推平台</p>
 
         <h2><span style="font-weight:bold;">BitAdminCore框架（微信）</span></h2>
         <h4><span style="font-weight:bold;">登录页面：</span></h4>
@@ -79,7 +79,13 @@
         <p>只有一个增删查改。</p>
     </div>
 </div>
+<!--cnzz统计代码，可以移除，开始-->
+<div style="display:none;">
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1263497164'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1263497164%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+</div>
+<!--cnzz统计代码，可以移除，结束-->
 <script src="../../lib/jquery/jquery.min.js"></script>
+<script src="../../js/framework/bitadmin.js"></script>
 <script>
-    $.get("../../readme/apk", function (result) { });
+
 </script>
