--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layout.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layout.html
@@ -68,7 +68,6 @@
     </script>
 </head>
 <body class="hold-transition skin-blue">
-    <!-- Site wrapper -->
     <div class="wrapper">
         <div class="content-wrapper">
             <section class="content-header">
@@ -83,6 +82,11 @@
                 </ol>
             </section>
             <section class="content"></section>
+            <!--cnzz统计代码，可以移除，开始-->
+            <div style="display:none;">
+                <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1263497164'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1263497164%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+            </div>
+            <!--cnzz统计代码，可以移除，结束-->
         </div>
     </div>
 </body>
