--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/Example.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/Example.html
@@ -73,13 +73,13 @@
     $(function () {
         //查询套件初始化
         var querySuite = $("#exampleQuery").querySuite()
-            .columns["option"].format(function (val, data) {
+            .columns["option"].format(function (event,val, data) {
                 var span = $('<span class="btn btn-link">修改</span>');
                 span.bind('click', function () {
                     debugger;
                     BitPage.Redirect("/WorkflowExample/ExampleEdit", { exampleId: data.exampleId }, "WorkflowExample");
                 });
-                return span;
+                $(this).append(span);
             })
             .import(function (result) {
                 console.log(result);
