--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workbench/done.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workbench/done.html
@@ -36,8 +36,6 @@
         </div>
         <!-- 列表-->
         <div class="querySuite-table"
-             data-order-by="BRU.endTime"
-             data-order-type="DESC"
              data-key="taskUserId"
              data-query-url="../../WorkFlow/GetWorkbenchList">
             <table>
@@ -62,7 +60,7 @@
     $(function () {
         //查询套件初始化
         var querySuite = $("#exampleQuery").querySuite()
-            .columns["workOrderName"].format(function (val, data) {
+            .columns["workOrderName"].format(function (event, val, data) {
                 var span = $('<span class="btn btn-link">' + (val || '') + '</span>');
                 span.bind('click', function () {
                     switch (data.mainCode) {
@@ -73,10 +71,10 @@
                             break;
                     }
                 });
-                return span;
+                $(this).append(span);
             })
-            .columns["userName"].format(function (val, data) {
-                return data.userName + "(" + data.userCode + ")";
+            .columns["userName"].format(function (event, val, data) {
+                $(this).html(data.userName + "(" + data.userCode + ")");
             })
             .query();
     });
