--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/learn.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/learn.html
@@ -32,10 +32,16 @@
         <div class="row">
             <a href="http://www.cnblogs.com/chenyinxin/p/9098902.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（四）核心套件querySuite按钮功能</a>
         </div>
+        <div class="row">
+            <a href="http://www.cnblogs.com/chenyinxin/p/9105986.html" class="btn-link" target="_blank">BitAdminCore框架应用篇：（五）核心套件querySuite列的定义</a>
+        </div>
     </div>
     <div class="col-md-6">
         <div class="row">
             <h4>BitAdminCore更新日志</h4>
+        </div>
+        <div class="row">
+            <a href="http://www.cnblogs.com/chenyinxin/p/9107054.html" class="btn-link" target="_blank">更新日志20180529</a>
         </div>
         <div class="row">
             <a href="http://www.cnblogs.com/chenyinxin/p/9087139.html" class="btn-link" target="_blank">更新日志20180524</a>
