--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/notice.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/notice.html
@@ -35,6 +35,7 @@
         <div class="row">
             <a href="javascript:sendEmail();" class="btn btn-success">发送电子邮件</a>
         </div>
+        <hr />
         <div class="row">
             <h4>推送WebSocket消息：</h4>
             通过WebSocket方式推送消息到网页，可改造为聊天功能。
@@ -43,6 +44,25 @@
             <a href="javascript:pushWebSocket();" class="btn btn-success">服务端推送</a>
             <a href="javascript:sendWebSocket();" class="btn btn-success">客户端发送</a>
         </div>
+        <hr />
+        <div class="row">
+            <h4>推送微信公众号消息：</h4>
+            先扫二维码关注公众号，再向自己推送一条消息。<br />
+            <img width="150" src="http://mmbiz.qpic.cn/mmbiz_jpg/sicib7WeTSmgW8wCM7UwhkiaZiaC35RyHibQ478zmJW3noqlo5I0GYuIhhNC37Xnb0H1DdVNWkdNtziakc2rpJjEXDug/0" />
+        </div>
+        <div class="row">
+            <a href="javascript:sendWeixinMP();" class="btn btn-success">推送公众号消息</a>
+        </div>
+        <hr />
+        <div class="row">
+            <h4>推送微信企业号消息：</h4>
+            先扫二维码加入企业，再向自己推送一条消息。<br />
+            <img width="150" src="https://work.weixin.qq.com/wework_admin/genqrcode?action=join&vcode=2d116dc3ab70036bc23d1de6e0436166&r=hb_share_mng_contacts" />
+        </div>
+        <div class="row">
+            <a href="javascript:sendWeixinWork();" class="btn btn-success">推送企业号消息</a>
+        </div>
+        <hr />
         <div class="row">
             <h4>推送个推平台消息：</h4>
             通过个推平台向手机App推送消息。先绑定当前用户的clientId。
@@ -51,6 +71,7 @@
             <a href="javascript:bindClientId();" class="btn btn-primary">绑定clientId</a>
             <a href="javascript:pushIgetui();" class="btn btn-success">推送个推消息</a>
         </div>
+        <hr />
     </div>
     <div class="col-md-6">
 
@@ -62,6 +83,7 @@
             <img src="../../qrcode/encode?msg=http%3a%2f%2fbit.bitdao.cn%2fapps%2fBitAdminCore_1.0.3.apk" width="100" height="100" />
         </div>
     </div>
+    <div class="col-md-12" style="height:100px;"></div>
     <div class="col-md-12">
         <div class="row">
             <h4>定时服务列表：</h4>
@@ -114,6 +136,14 @@
         function bindClientId() {
             var cid = window.prompt("请输入clientId");
             $.get("../../account/bindClientId", { clientId: cid, userId: "" }, function (result) { }); return false;
+        }
+        function sendWeixinMP() {
+            var userCode = window.prompt("请输入你的OpenId");
+            $.get("../../readme/noticWeixinMP", { userCode: userCode }, function (result) { }); return false;
+        }
+        function sendWeixinWork() {
+            var userCode = window.prompt("请输入你的账号");
+            $.get("../../readme/noticWeixinWork", { userCode: userCode }, function (result) { }); return false;
         }
 
         function online() {
