--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/notice.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/notice.html
@@ -87,6 +87,7 @@
     <div class="col-md-12">
         <div class="row">
             <h4>定时服务列表：</h4>
+            换了NETCore2.1之后就不启动了。<br />
             <a href="javascript:timejob();" class="btn btn-success">刷新服务列表</a>
         </div>
         <div class="row">
