--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/learn.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/learn.html
@@ -41,6 +41,9 @@
             <h4>BitAdminCore更新日志</h4>
         </div>
         <div class="row">
+            <a href="https://www.cnblogs.com/chenyinxin/p/9139501.html" class="btn-link" target="_blank">更新日志20180605</a>
+        </div>
+        <div class="row">
             <a href="http://www.cnblogs.com/chenyinxin/p/9117047.html" class="btn-link" target="_blank">更新日志20180531</a>
         </div>
         <div class="row">
