--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/weixin/account/login.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/weixin/account/login.html
@@ -25,10 +25,10 @@
             snsapi_userinfo 手动授权可通过openid获取基本信息。
         </div>
         <div class="row">
-            <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx806943202a75a124&redirect_uri=http%3A%2F%2Fbit.bitdao.cn%2Fauth%2Fweixingzhsignin&response_type=code&scope=snsapi_base&state=1#wechat_redirect" class="btn btn-success">公众号静默授权</a>
+            <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx806943202a75a124&redirect_uri=https%3A%2F%2Fwww.bitadmincore.com%2Fauth%2Fweixingzhsignin&response_type=code&scope=snsapi_base&state=1#wechat_redirect" class="btn btn-success">公众号静默授权</a>
         </div>
         <div class="row">
-            <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx806943202a75a124&redirect_uri=http%3A%2F%2Fbit.bitdao.cn%2Fauth%2Fweixingzhsignin&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect" class="btn btn-success">公众号普通授权</a>
+            <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx806943202a75a124&redirect_uri=https%3A%2F%2Fwww.bitadmincore.com%2Fauth%2Fweixingzhsignin&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect" class="btn btn-success">公众号普通授权</a>
         </div>
         <div class="row">
             <h4>企业号授权模式：</h4>
@@ -37,10 +37,10 @@
             snsapi_privateinfo：手动授权，可获取成员的详细信息，包含手机、邮箱。<br />
         </div>
         <div class="row">
-            <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wwa26d4508575b5fe9&redirect_uri=http%3A%2F%2Fbit.bitdao.cn%2Fauth%2Fweixinqyhsignin&response_type=code&scope=snsapi_userinfo&agentid=1000007&state=#wechat_redirect" class="btn btn-success">企业号静默授权</a>
+            <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wwa26d4508575b5fe9&redirect_uri=https%3A%2F%2Fwww.bitadmincore.com%2Fauth%2Fweixinqyhsignin&response_type=code&scope=snsapi_userinfo&agentid=1000007&state=#wechat_redirect" class="btn btn-success">企业号静默授权</a>
         </div>
         <div class="row">
-            <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wwa26d4508575b5fe9&redirect_uri=http%3A%2F%2Fbit.bitdao.cn%2Fauth%2Fweixinqyhsignin&response_type=code&scope=snsapi_privateinfo&agentid=1000007&state=#wechat_redirect" class="btn btn-success">企业号手动授权</a>
+            <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wwa26d4508575b5fe9&redirect_uri=https%3A%2F%2Fwww.bitadmincore.com%2Fauth%2Fweixinqyhsignin&response_type=code&scope=snsapi_privateinfo&agentid=1000007&state=#wechat_redirect" class="btn btn-success">企业号手动授权</a>
         </div>
         <div class="row">
 
